@@ -1,3 +1,12 @@
+2004-04-16  Richard Williamson   <rjw@apple.com>
+
+	Added interpreter lock protection around object creation.
+
+        Reviewed by Chris.
+
+        * bindings/runtime.cpp:
+        (Instance::createRuntimeObject):
+
 2004-04-16  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Ken.
